--- a/chart/templates/tasks/run-jmeter.yaml
+++ b/chart/templates/tasks/run-jmeter.yaml
@@ -7,15 +7,19 @@ spec:
     - name: TEST_DIR
       type: string
       description: "Directory containing test files"
+      default: "TestPlans"
   workspaces:
     - name: data-workspace
       description: "Workspace for test data"
       mountPath: /data
   steps:
     - name: run-shell
-      image: rbillon59/jmeter-k8s-base:5.6.3
+      image: quay.io/springdo/jmeter:5.6.3
       script: |
         #!/usr/bin/env sh
         set -xe
         
-        cd /data/$(params.TEST_DIR)
+        # ls /data/$(params.TEST_DIR)
+        ls /data/
+
+        sleep 360
