--- a/pipeline/tasks/run-jmeter.yaml
+++ b/pipeline/tasks/run-jmeter.yaml
@@ -1,67 +1,46 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: run-jmeter
 spec:
   params:
-    - name: TEST_DIR
+    - default: TestPlans
+      description: Directory containing test files
+      name: TEST_DIR
       type: string
-      description: "Directory containing test files"
-      default: "TestPlans"
-    # - name: USER_PARAMS
-    #   type: string
-    #   description: "Additional Prams (passed as a string to the executor)"
-    #   default: ""
-    # - name: JMETER_COMMAND
-    #   type: string
-    #   description: "Additional Prams (passed as a string to the executor)"
-    #   default: ""
-    - name: JMETER_AGENTS
+    - default: '3'
+      description: number of static agents to use (3)
+      name: JMETER_AGENTS
       type: string
-      description: "number of static agents to use (3)"
-      default: 3
-    - name: APP_NAME_SUFFIX
+    - default: abc
+      description: 'Suffix to add to the agent deployments, defaults to abc'
+      name: APP_NAME_SUFFIX
       type: string
-      description: "Suffix to add to the agent deployments, defaults to abc"
-      default: "abc"
-    - default: 'docker.io/lachlanevenson/k8s-helm@sha256:5c792f29950b388de24e7448d378881f68b3df73a7b30769a6aa861061fd08ae'
-      description: Specify a specific helm image
-      name: helm_image
-      type: string
-
   steps:
-    - image: $(params.helm_image)
-      name: install-jmeter-grid
-      resources: {}
+    - computeResources: {}
+      image: 'quay.io/springdo/jmeter:5.6.3'
+      name: run-jmeter
       script: |
-        set -xe
-        ls $(workspaces.source.path)
+        #!/bin/bash
 
-        echo "Installing / upgrading the grid"
-        helm upgrade --install $(params.APP_NAME_SUFFIX) --set appName=$(params.APP_NAME_SUFFIX)
-      workingDir: $(workspaces.source.path)/chart
-
-    - name: run-jmeter
-      image: quay.io/springdo/jmeter:5.6.3
-      workingDir: $(workspaces.source.path)
-      script: |
-        #!/usr/bin/env sh
-
-        set -xe
-        ls $(workspaces.source.path)
-        echo "🧹 Cleaning up left over bits 🧹"
-        export T_DIR=/data/jmeter-grid
+        echo "\U0001F9F9 Cleaning up left over bits \U0001F9F9"
+        export T_DIR=/data/
         export R_DIR=${T_DIR}/report
+
         rm -rf ${T_DIR}/HelloWorld.jtl
         rm -rf ${R_DIR}
         rm -rf ${T_DIR}/jmeter.log
         mkdir -p ${R_DIR}
-        export AGENT_LIST=""
-        x=1; while  [ $x -le $(params.JMETER_AGENTS) ]; do AGENT_LIST+="jmeter-agent-$x-$(params.APP_NAME_SUFFIX)," $(( x++ )); done
 
-        echo "🏃‍♀️ Running the Jmeter shizzles 🧪"
+        ls $(workspaces.source.path)
+        echo "Copy test files to thh mount"
+        cp -vr $(workspaces.source.path)/$(params.TEST_DIR) /data/
+
+        echo "\U0001F3C3‍♀️ Running the Jmeter shizzles \U0001F9EA"        
+        export AGENT_LIST=""
+        let x=0; while  [ $x -le $(params.JMETER_AGENTS) ]; do AGENT_LIST+="jmeter-agent-$x-$(params.APP_NAME_SUFFIX),"; let x++; done
         echo "Agent List :: ${AGENT_LIST}" 
-        jmeter -Dlog_level.jmeter=DEBUG -n -t ${T_DIR}/$(params.TEST_DIR)/*.jmx -l ${T_DIR}/HelloWorld.jtl -j ${T_DIR}/jmeter.log -Dserver.rmi.localport=1099 -Dserver_port=1099 -Jserver.rmi.ssl.disable=true -Jjmeter.reportgenerator.temp_dir=/tmp -R jmeter-agent-0-avc -e -o ${R_DIR}
+        jmeter -Dlog_level.jmeter=DEBUG -n -t ${T_DIR}/$(params.TEST_DIR)/*.jmx -l ${T_DIR}/HelloWorld.jtl -j ${T_DIR}/jmeter.log -Dserver.rmi.localport=1099 -Dserver_port=1099 -Jserver.rmi.ssl.disable=true -Jjmeter.reportgenerator.temp_dir=/tmp -R ${AGENT_LIST} -e -o ${R_DIR}
 
         echo "==== jmeter.log ===="
         cat ${T_DIR}/jmeter.log
@@ -71,8 +50,15 @@ spec:
 
         echo "==== HTML Test Report ===="
         echo "See HTML test report in ${R_DIR}/index.html"
-
+        ls ${R_DIR}
+      volumeMounts:
+        - mountPath: /data
+          name: test-data
+      workingDir: $(workspaces.source.path)
+  volumes:
+    - name: test-data
+      persistentVolumeClaim:
+        claimName: jmeter-pvc-abc
   workspaces:
-    - name: data-workspace
-      description: "Workspace for test data"
-      mountPath: /data
+    - description: Workspace from git clone
+      name: source
