--- a/pipeline/tasks/helm-deploy.yaml
+++ b/pipeline/tasks/helm-deploy.yaml
@@ -13,20 +13,26 @@ spec:
       type: string
     - default: abc
       description: 'Suffix to add to the agent deployments, defaults to abc'
-      name: APP_NAME_SUFFIX
+      name: APP_NAME
       type: string
   steps:
     - image: 'quay.io/redhat-cop/tool-box:latest'
       name: bash-command
-      resources: {}
       script: |
         set -xe
         ls $(workspaces.source.path)
  
         echo "Installing / upgrading the grid"
-        helm upgrade --install $(params.APP_NAME_SUFFIX) --set appName=$(params.APP_NAME_SUFFIX) $(params.VALUES_OVERRIDES) chart
+        helm upgrade --install $(params.APP_NAME) --set appName=$(params.APP_NAME) $(params.VALUES_OVERRIDES) chart
       securityContext:
         runAsUser: 0
       workingDir: $(workspaces.source.path)/$(params.CONTEXT_DIR)
+    - image: 'quay.io/openshift/origin-cli:4.12'
+      name: verify
+      script: |
+        #!/bin/sh
+        echo "verify the deployment by checking the deployments have happended..."
+        echo "NOTE - lazy mode only checking one deployement [deployment/jmeter-agent-0-$(params.APP_NAME)]"
+        oc rollout status --timeout=2m deployment/jmeter-agent-0-$(params.APP_NAME)
   workspaces:
     - name: source
